--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -1,11 +1,12 @@
 services:
   _defaults:
-    autowire: false
+    autowire: true
     autoconfigure: true
     public: false
 
   Code711\Code711Housekeeping\:
     resource: '../Classes/*'
+
   Code711\Code711Housekeeping\Command\UpdateVersionsCommand:
     tags:
       - name: 'console.command'
