--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	"type": "typo3-cms-extension",
 	"license": "MIT",
 	"require": {
-		"typo3/cms-core": "^12.4"
+		"typo3/cms-core": "^12.4",
+		"m4tthumphrey/php-gitlab-api": "^11.11"
 	},
 	"autoload": {
 		"psr-4": {
