--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "code711/code711-housekeeping",
-	"description": "Housekeeping",
+	"description": "Keep track of your TYPO3 versions by checking your git-repositories (gitlab for now). You can then see the results on your TYPO3 Dashboard. It is of course checked against the currently available latest TYPO3 version, keeping you updated on what needs to be updated.",
 	"authors": [
 		{
 			"name": "Patricia Ottmar",
@@ -11,8 +11,16 @@
 	"type": "typo3-cms-extension",
 	"license": "MIT",
 	"require": {
+		"php": "8.0.*||8.1.*||8.2.*",
 		"typo3/cms-core": "^12.4",
 		"m4tthumphrey/php-gitlab-api": "^11.11"
+	},
+	"require-dev": {
+		"typo3/cms-backend": "^12.0",
+		"typo3/cms-frontend": "^12.0",
+		"typo3/cms-tstemplate": "^12.0",
+		"typo3/cms-install": "^12.0",
+		"typo3/coding-standards": "^0.5.5"
 	},
 	"autoload": {
 		"psr-4": {
@@ -26,6 +34,8 @@
 	},
 	"extra": {
 		"typo3/cms": {
+			"cms-package-dir": "{$vendor-dir}/typo3/cms",
+			"web-dir": ".Build/public",
 			"extension-key": "code711_housekeeping"
 		}
 	}
